--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Урок 1</a>
+            <a class="nav-link" href="lesson1.php">Урок 1</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Урок 2</a>
