--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css" />
     <title>NIX-Education</title>
   </head>
   <body>
     <header></header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="index.html">Navbar</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -29,10 +29,13 @@
           <li class="nav-item">
             <a class="nav-link" href="lesson2.php">Урок 2</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="lesson3.html">Урок 3</a>
+          </li>
         </ul>
       </div>
     </nav>
-    <main></main>
+    <main><h2>Main page</h2></main>
     <footer></footer>
   </body>
 </html>
